# BoostProjects

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp
Asio/: CMakeLists.txt  CoroutineApps.cpp  Experiments.cpp  main.cpp
Asio/BackgroundTasks/: BackgroundTasks.cpp  BackgroundTasks.h
Asio/Coroutines/: CoroutineApps.h
Asio/ExceptionHandling/: ExceptionHandling.cpp  ExceptionHandling.h
Asio/Experiments/: Experiments.cpp  Experiments.h
Asio/IO_Context/: IoContext.cpp  IoContext.h
Asio/Post_Dispatch_Tasks/: PostDispatchTasks.cpp  PostDispatchTasks.h
Asio/Threading/: Threading.cpp  Threading.h
Asio/Timeouts/: Timeouts.cpp  Timeouts.h
Asio/Timer/: Timer.cpp  Timer.h
Asio/Utils/: Utilities.cpp  Utilities.h
Asio_TcpServer/: CMakeLists.txt  main.cpp
Asio_TcpServer/docs/: impl.md
Beast/: CMakeLists.txt  Client.cpp  main.cpp
Beast/http/: Client.cpp  Client.h  HTTPS_Server.cpp  HTTPS_Server.h  HTTPServer.cpp  HTTPServer.h
Beast/utilities/: Utilities.cpp  Utilities.h
Beast/web_sockets/: WebSocketClients.cpp  WebSocketClients.h  WebSocketServers.cpp  WebSocketServers.h  root_certificates.hpp  server_certificate.hpp
Buffers/: Buffers.cpp  Buffers.h
Collections/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  FlatMap.cpp  FlatMap.h  main.cpp
Communication/: CMakeLists.txt  Interprocess.cpp  Interprocess.h  main.cpp
Coroutines/: CMakeLists.txt  main.cpp
Coroutines/docs/: 1.md  2.md
DateTime/: CMakeLists.txt  DateTime.cpp  DateTime.h  main.cpp
Describe/: CMakeLists.txt  main.cpp
Experiments/: CMakeLists.txt  main.cpp
Json/: CMakeLists.txt  Json.cpp  Json.h  main.cpp
Logging/: CMakeLists.txt  Logging.cpp  Logging.h  main.cpp  settings.txt
Math/: BoostMathTests.cpp  BoostMathTests.h  CMakeLists.txt  main.cpp
Networking/: Beast.cpp  Beast.h  CMakeLists.txt  HTTPServer.cpp  HTTPServer.h  Networking.cpp  Networking.h  SSL_TCPServer.cpp  SSL_TCPServer.h  TCPEchoServerClient.cpp  TCPEchoServerClient.h  UDPEchoServerClient.cpp  UDPEchoServerClient.h  main.cpp
ProgramOptions/: CMakeLists.txt  ProgramOptions.cpp  ProgramOptions.h  main.cpp
Serial/: CMakeLists.txt  Serial.cpp  Serial.h  main.cpp
SmartPointers/: CMakeLists.txt  SmartPointers.cpp  SmartPointers.h  main.cpp
Spirit/: CMakeLists.txt  Spirit.cpp  Spirit.h  main.cpp
Threads/: CMakeLists.txt  Fibers.cpp  Fibers.h  Threads.cpp  Threads.h  main.cpp
Timer/: CMakeLists.txt  Timer.cpp  Timer.h  main.cpp
Tokenizer/: CMakeLists.txt  Tokenizer.cpp  Tokenizer.h  main.cpp
Uuid/: CMakeLists.txt  Uuid.cpp  Uuid.h  main.cpp
data/: key.pem  out.json  server.pem  test.json
