cmake_minimum_required(VERSION 3.21)
project(BoostProjects)

set(CMAKE_CXX_STANDARD 23)

add_subdirectory(Collections)
add_subdirectory(Communication)
add_subdirectory(DateTime)
add_subdirectory(Json)
add_subdirectory(Logging)
add_subdirectory(Math)
add_subdirectory(Networking)
add_subdirectory(Experiments)
add_subdirectory(ProgramOptions)
add_subdirectory(Serial)
add_subdirectory(SmartPointers)
add_subdirectory(Spirit)
add_subdirectory(Threads)
add_subdirectory(Timer)
add_subdirectory(Tokenizer)
add_subdirectory(Uuid)

